tests/fail-decl.mg
main {
  step {
    int x;
    int x; // error: redeclaration in same block
  }
}
